Revision history for {{$dist->name}}

{{$NEXT}}

1.005013 2015-10-19T11:29:36Z 0343510
 [Dependencies::Stats]
 - Dependencies changed since 1.005012, see misc/*.deps* for details
 - configure: +2
 - develop: +5 ↑1 -1 (suggests: ↑2)

 [Packaging]
 - Use a simpler version of DynamicPrereqs invokation, thanks @karenetheridge
 - Closes #1

1.005012 2015-04-13T03:25:53Z 2f733bb
 [Tests]
 - Todoize more of the "sniff out Moose loaders" test for now.

1.005011 2015-04-12T03:04:32Z 5d69b6a
 [Dependencies::Stats]
 - Dependencies changed since 1.005010, see misc/*.deps* for details
 - configure: ↓1
 - develop: +1
 - runtime: ↓1 -1
 - test: ↓1

 [Minor]
 - Drop utf8 and 5.008 minimums. Had intended to do this in previous release, but slipped my mind.
 - Some doc fixes too.
 - Avoid issues with older chainsmokes needing sanity

1.005010 2015-04-11T10:03:55Z 63f0907
 [Dependencies::Stats]
 - Dependencies changed since 1.005000, see misc/*.deps* for details
 - develop: +3 ↑3 -2 (recommends: ↓1, suggests: ↑2)
 - runtime: +2 -1 (recommends: +2 ↓1 -1)
 - test: (recommends: ↓1)

 [Minor]
 - Moved to Moo where Moose was required
 - Load Dzil lazier for App::Commands'

1.005000 2014-11-06T15:24:12Z 0194343
 [Dependencies::Stats]
 - Dependencies changed since 1.004002, see misc/*.deps* for details
 - develop: +1 -1 (recommends: ↑1)
 - runtime: +1 -1 (recommends: +1 ↑1)
 - test: (recommends: ↑1)

 [Features]
 - Now optionally uses Test::TempDir::Tiny for the temporary directory.

 [Internals]
 - use recommended.pm to load optional modules.

1.004002 2014-11-01T11:43:22Z dc767c8
 [Bugfix]
 - Require a version of Test::More with a useable subtest.

 [Dependencies::Stats]
 - Dependencies changed since 1.004001, see misc/*.deps* for details
 - develop: (suggests: ↑1)
 - runtime: ↑1
 - test: ↑1

1.004001 2014-10-30T12:56:17Z cab1d68
 [Bugfix]
 - Soften DPath dependency till upstream can fix it for 5.8

 [Dependencies::Stats]