@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.039.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.008.
 use strict;
 use warnings;
 
@@ -71,7 +71,7 @@ my %FallbackPrereqs = (
   "warnings" => 0
 );
 
-# inserted by Dist::Zilla::Plugin::DynamicPrereqs 0.016
+# inserted by Dist::Zilla::Plugin::DynamicPrereqs 0.032
 # Avoid issue with sanity bugs and Moose penalties
 my $module = "Dist::Zilla::App::Command::chainsmoke";
 requires($module, '1.15') if has_module($module);
@@ -88,7 +88,21 @@ delete $WriteMakefileArgs{CONFIGURE_REQUIRES}
 
 WriteMakefile(%WriteMakefileArgs);
 
-# inserted by Dist::Zilla::Plugin::DynamicPrereqs 0.016
+# inserted by Dist::Zilla::Plugin::DynamicPrereqs 0.032
+sub _add_prereq {
+  my ($mm_key, $module, $version_or_range) = @_;
+  $version_or_range ||= 0;
+  warn "$module already exists in $mm_key -- need to do a sane metamerge!"
+    if exists $WriteMakefileArgs{$mm_key}{$module}
+      and $WriteMakefileArgs{$mm_key}{$module} ne '0'
+      and $WriteMakefileArgs{$mm_key}{$module} ne $version_or_range;
+  warn "$module already exists in FallbackPrereqs -- need to do a sane metamerge!"
+    if exists $FallbackPrereqs{$module} and $FallbackPrereqs{$module} ne '0'
+        and $FallbackPrereqs{$module} ne $version_or_range;
+  $WriteMakefileArgs{$mm_key}{$module} = $FallbackPrereqs{$module} = $version_or_range;
+  return;
+}
+
 sub has_module {
   my ($module, $version_or_range) = @_;
   require Module::Metadata;
@@ -103,13 +117,9 @@ sub has_module {
   return 0;
 }
 
-sub requires {
-  goto &runtime_requires;
-}
+sub requires { goto &runtime_requires }
 
 sub runtime_requires {
   my ($module, $version_or_range) = @_;
-  $version_or_range = '0' if not $version_or_range;
-  $WriteMakefileArgs{PREREQ_PM}{$module} = $FallbackPrereqs{$module} = $version_or_range;
-  return;
+  _add_prereq(PREREQ_PM => $module, $version_or_range);
 }
