@@ -112,11 +112,11 @@ Which lets us do
 
 # AUTHOR
 
-Kent Fredric &lt;kentnl@cpan.org>
+Kent Fredric <kentnl@cpan.org>
 
 # COPYRIGHT AND LICENSE
 
-This software is copyright (c) 2015 by Kent Fredric &lt;kentnl@cpan.org>.
+This software is copyright (c) 2017 by Kent Fredric <kentnl@cpan.org>.
 
 This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
