@@ -76,6 +76,8 @@ trailing_whitespace = 1
 [Test::MinimumVersion / @Author::KENTNL/Test::MinimumVersion]
 
 [Test::Compile::PerFile / @Author::KENTNL/Test::Compile::PerFile]
+:version = 0.003902
+test_template = 02-raw-require.t.tpl
 
 [Test::Perl::Critic / @Author::KENTNL/Test::Perl::Critic]
 
